Fix header spacing and hover effect

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -56,7 +56,7 @@ header #logo {
 
 nav {
     padding: 0.375em;
-    font-family: 'NevisBold', 'Futura' 'Helvetica', 'Arial', sans-serif;
+    font-family: 'NevisBold', 'Futura', 'Helvetica', 'Arial', sans-serif;
     font-size: 0.85em;
     text-align: center;
     text-transform: uppercase;
@@ -161,6 +161,8 @@ h1 a:link,
 h1 a:visited,
 h1 a:hover,
 h1 a:active {
+    border: 0;
+    background-color: transparent;
     color: #101;
     text-decoration: none;
 }
@@ -174,6 +176,8 @@ h2 a:link,
 h2 a:visited,
 h2 a:hover,
 h2 a:active {
+    border: 0;
+    background-color: transparent;
     color: #101;
     text-decoration: none;
 }
